--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -3,163 +3,118 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dde1e3">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:minHeight="?attr/actionBarSize"
+        app:title="New Post"
+        app:titleTextColor="@android:color/white" />
 
-        <LinearLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_margin="8dp"
+        android:background="#60000000">
+
+        <ImageView
+            android:id="@+id/ivCamera"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:src="@drawable/ic_camera_alt" />
+    </FrameLayout>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/toolbar_background"
-                android:minHeight="?attr/actionBarSize"
-                app:title="New Post"
-                app:titleTextColor="@android:color/white" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="8dp"
-                android:background="#60000000">
+        <EditText
+            android:id="@+id/edtDescription"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:hint="@string/hint_description"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textSize="20sp" />
 
-                <ImageView
-                    android:id="@+id/iv_camera"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:src="@drawable/ic_camera_alt" />
+        <LinearLayout
+            android:id="@+id/lnlPrice"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
 
-            </FrameLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_small"
-                android:layout_marginRight="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_small"
-                android:background="#f6f7f8"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_price"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:padding="@dimen/padding_small"
-                    android:text="Price:"
-                    android:textSize="24dp" />
-
-                <EditText
-                    android:id="@+id/et_price"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="4"
-                    android:hint="1.200.000 vnd" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:background="#f6f7f8"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_dien_tich"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:padding="@dimen/padding_small"
-                    android:text="Dien tich:"
-                    android:textSize="24dp" />
-
-                <EditText
-                    android:id="@+id/et_num_m2"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="4"
-                    android:hint="20 m2" />
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginLeft="@dimen/margin_small"
-                android:layout_marginRight="@dimen/margin_small"
-                android:background="#f6f7f8">
-
-                <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/margin_small"
-                    android:text="Address:"
-                    android:textSize="24sp" />
-
-                <EditText
-                    android:id="@+id/et_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="44dp"
-                    android:layout_alignRight="@+id/iv_place"
-                    android:layout_toRightOf="@id/tv_address"
-                    android:hint="Address" />
-
-                <ImageButton
-                    android:id="@+id/iv_place"
-                    android:layout_width="@dimen/circle_btn_height"
-                    android:layout_height="@dimen/circle_btn_height"
-                    android:layout_alignParentRight="true"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_place_36dp" />
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:background="#f6f7f8"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_phome"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:padding="@dimen/padding_small"
-                    android:text="Phone:"
-                    android:textSize="24dp" />
-
-                <EditText
-                    android:id="@+id/et_phone"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="4"
-                    android:hint="0987000111" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tvPrice"
+                style="@style/TextViewPost"
+                android:text="@string/tv_price" />
 
             <EditText
-                android:id="@+id/et_description"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="@dimen/margin_small"
-                android:layout_marginRight="@dimen/margin_small"
-                android:layout_weight="5"
-                android:background="#f6f7f8"
-                android:gravity="start"
-                android:hint="Description..." />
-
+                android:id="@+id/edtPrice"
+                style="@style/EditTextPost"
+                android:hint="@string/hint_price" />
 
         </LinearLayout>
-    </ScrollView>
+
+
+        <LinearLayout
+            android:id="@+id/lnlArea"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvArea"
+                style="@style/TextViewPost"
+                android:text="@string/tv_area" />
+
+            <EditText
+                android:id="@+id/edtArea"
+                style="@style/EditTextPost"
+                android:hint="20 m2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lnlAddress"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvAddress"
+                style="@style/TextViewPost"
+                android:text="@string/tv_address" />
+
+            <EditText
+                android:id="@+id/edtAddress"
+                style="@style/EditTextPost"
+                android:hint="@string/hint_address" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lnlPhone"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvPhone"
+                style="@style/TextViewPost"
+                android:text="@string/tv_phone" />
+
+            <EditText
+                android:id="@+id/edtPhone"
+                style="@style/EditTextPost"
+                android:hint="0987000111"
+                android:inputType="phone" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
