--- a/app/src/main/res/drawable/background_post_infor.xml
+++ b/app/src/main/res/drawable/background_post_infor.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="90"
         android:endColor="@color/transparent"
-        android:startColor="#212121"
+        android:startColor="#2d2d2d"
         android:type="linear" />
 </shape>
