--- a/app/src/main/res/layout/item_photo_post.xml
+++ b/app/src/main/res/layout/item_photo_post.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/size_width_image_review"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:gravity="center"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/photoSample"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
