--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -21,8 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:src="@drawable/ic_avatar_tmp"
-            app:civ_border_width="1dp" />
+            android:src="@drawable/avatar_user_default" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -93,6 +92,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvPhotos"
+            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
 
