--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="comment_profile_pic_size">64dp</dimen>
     <dimen name="post_information_text_size">16sp</dimen>
     <dimen name="padding_notification_item">8dp</dimen>
+    <dimen name="size_width_image_review">300dp</dimen>
 </resources>
