--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="12dp">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rlHeaderItem"
@@ -20,8 +19,7 @@
             android:layout_height="@dimen/size_avatar_post_item"
             android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/avatar_user_default" />
+            android:layout_marginRight="8dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -37,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                tools:text="Dang Fiztssi" />
+                android:text="Dang Fiztssi" />
 
             <TextView
                 android:id="@+id/tvTimeStamp"
@@ -122,4 +120,11 @@
                 tools:text="1100 Ly Thuong Kiet, Phuong 10, TP.HCM" />
         </RelativeLayout>
     </FrameLayout>
+
+    <View
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        />
 </LinearLayout>
