--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -29,6 +29,12 @@
             android:src="@drawable/ic_camera_alt" />
     </FrameLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvImageChose"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_image_chose">
+    </android.support.v7.widget.RecyclerView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
