--- a/app/src/main/res/layout/dialog_upload_image_chooser.xml
+++ b/app/src/main/res/layout/dialog_upload_image_chooser.xml
@@ -1,76 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/padding_dialog_chooser"
+    android:paddingRight="@dimen/padding_dialog_chooser">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Open"
-            android:id="@+id/textView"
             android:gravity="center"
+            android:text="Open"
+            android:textSize="@dimen/font_size_title_chooser"
             android:textStyle="bold" />
 
     </FrameLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/size_medium"
+            android:layout_marginBottom="@dimen/size_medium"
+            android:id="@+id/dia_take_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/dia_take_photo">
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
                 android:id="@+id/imageView"
+                android:layout_width="@dimen/size_icon_chooser"
+                android:layout_height="@dimen/size_icon_chooser"
+                android:layout_margin="@dimen/margin_icon_chooser"
                 android:src="@drawable/ic_camera" />
 
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginLeft="@dimen/between_icon_text"
+                android:layout_marginRight="@dimen/between_icon_text"
+                android:gravity="center"
                 android:text="From camera"
-                android:id="@+id/textView2"
-                android:gravity="left|center"/>
+                android:textSize="@dimen/font_size_chooser" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/black"/>
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/size_medium"
+            android:layout_marginBottom="@dimen/size_medium"
+            android:id="@+id/dia_library"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/dia_library">
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
                 android:id="@+id/imageView3"
-                android:src="@drawable/ic_gallery"/>
+                android:layout_width="@dimen/size_icon_chooser"
+                android:layout_height="@dimen/size_icon_chooser"
+                android:layout_margin="@dimen/margin_icon_chooser"
+                android:src="@drawable/ic_gallery" />
 
             <TextView
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginLeft="@dimen/between_icon_text"
+                android:layout_marginRight="@dimen/between_icon_text"
+                android:gravity="center"
                 android:text="From Gallery"
-                android:id="@+id/textView4"
-                android:gravity="left|center"/>
+                android:textSize="@dimen/font_size_chooser" />
         </LinearLayout>
     </LinearLayout>
 
     <TextView
+        android:id="@+id/dia_nev_bt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="right"
         android:text="Cancel"
-        android:id="@+id/dia_nev_bt"
-        android:gravity="center" />
+        android:textSize="@dimen/font_size_chooser" />
 
 </LinearLayout>
