--- a/app/src/main/res/menu/menu_new_post.xml
+++ b/app/src/main/res/menu/menu_new_post.xml
@@ -4,8 +4,7 @@
 
     <item
         android:id="@+id/action_next"
-        android:icon="@drawable/ic_arrow_forward"
-        android:title="Next"
+        android:title="Post"
         app:showAsAction="ifRoom" />
 
 </menu>
