--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,5 +26,12 @@
 
     <!--Create new Post-->
     <dimen name="size_image_chose">80dp</dimen>
+    <dimen name="size_icon_chooser">28dp</dimen>
+    <dimen name="padding_dialog_chooser">12dp</dimen>
+    <dimen name="font_size_title_chooser">20dp</dimen>
+    <dimen name="font_size_chooser">18dp</dimen>
+    <dimen name="margin_icon_chooser">4dp</dimen>
+    <dimen name="between_icon_text">56dp</dimen>
+    <dimen name="size_medium">8dp</dimen>
 
 </resources>
