--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
     </style>
 
     <style name="TextViewPost">
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
@@ -33,6 +34,9 @@
     </style>
 
     <style name="EditTextPost">
+        <item name="android:textColor">@android:color/holo_blue_light</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:cursorVisible">true</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">3</item>
