--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,112 +16,125 @@
         app:title="New Post"
         app:titleTextColor="@android:color/white" />
 
-    <FrameLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:layout_margin="8dp"
-        android:background="#60000000">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/ivCamera"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:src="@drawable/ic_camera_alt" />
-    </FrameLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvImageChose"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/size_image_chose">
-    </android.support.v7.widget.RecyclerView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/edtDescription"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:hint="@string/hint_description"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:textSize="20sp" />
-
-        <LinearLayout
-            android:id="@+id/lnlPrice"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvPrice"
-                style="@style/TextViewPost"
-                android:text="@string/tv_price" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Photo"
+                style="@style/TextViewPost"/>
 
-            <EditText
-                android:id="@+id/edtPrice"
-                style="@style/EditTextPost"
-                android:hint="@string/hint_price" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvImageChose"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_image_chose"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/lnlPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvPrice"
+                        style="@style/TextViewPost"
+                        android:text="@string/tv_price" />
+
+                    <EditText
+                        android:id="@+id/edtPrice"
+                        style="@style/EditTextPost"
+                        android:hint="@string/hint_price" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/lnlArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvArea"
+                        style="@style/TextViewPost"
+                        android:text="@string/tv_area" />
+
+                    <EditText
+                        android:id="@+id/edtArea"
+                        style="@style/EditTextPost"
+                        android:hint="20 m2"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lnlAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvAddress"
+                        style="@style/TextViewPost"
+                        android:text="@string/tv_address" />
+
+                    <EditText
+                        android:id="@+id/edtAddress"
+                        style="@style/EditTextPost"
+                        android:hint="@string/hint_address" />
+                </LinearLayout>
+
+                <Spinner
+                    android:visibility="gone"
+                    android:id="@+id/spnAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                </Spinner>
+
+                <LinearLayout
+                    android:id="@+id/lnlPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvPhone"
+                        style="@style/TextViewPost"
+                        android:text="@string/tv_phone" />
+
+                    <EditText
+                        android:id="@+id/edtPhone"
+                        style="@style/EditTextPost"
+                        android:hint="0987000111"
+                        android:inputType="phone" />
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/edtDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:gravity="start"
+                    android:hint="@string/hint_description"
+                    android:lines="4"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:textSize="20sp"
+                    android:textColor="@android:color/holo_blue_light"/>
+            </LinearLayout>
 
         </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/lnlArea"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvArea"
-                style="@style/TextViewPost"
-                android:text="@string/tv_area" />
-
-            <EditText
-                android:id="@+id/edtArea"
-                style="@style/EditTextPost"
-                android:hint="20 m2" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/lnlAddress"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvAddress"
-                style="@style/TextViewPost"
-                android:text="@string/tv_address" />
-
-            <EditText
-                android:id="@+id/edtAddress"
-                style="@style/EditTextPost"
-                android:hint="@string/hint_address" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/lnlPhone"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvPhone"
-                style="@style/TextViewPost"
-                android:text="@string/tv_phone" />
-
-            <EditText
-                android:id="@+id/edtPhone"
-                style="@style/EditTextPost"
-                android:hint="0987000111"
-                android:inputType="phone" />
-        </LinearLayout>
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
