--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,6 +10,12 @@
     android:orientation="vertical"
     tools:context="com.minhnpa.coderschool.a9boarding.activity.DetailActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -61,7 +67,7 @@
                     android:layout_height="80dp"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center"
-                    android:src="@drawable/fab_pic" />
+                    android:src="@drawable/sample_background" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -102,26 +108,47 @@
             android:paddingRight="16dp">
 
             <TextView
+                android:layout_marginTop="@dimen/between_row_detail"
+                android:layout_marginBottom="@dimen/between_row_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Address: 1100 Ly Thuong Kiet, Phuong 10, TP.HCM"
+                android:text="Address: 68 Ly Thuong Kiet, Phuong 10, TP.HCM"
                 android:textColor="@color/black"
                 android:textSize="@dimen/post_information_text_size"
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginTop="@dimen/between_row_detail"
+                android:layout_marginBottom="@dimen/between_row_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Area: 30m2"
+                android:text="Area: 50m2"
                 android:textColor="@color/black"
                 android:textSize="@dimen/post_information_text_size" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Phone: 0123 456 789"
-                android:textColor="@color/black"
-                android:textSize="@dimen/post_information_text_size" />
+            <LinearLayout
+                android:layout_marginTop="@dimen/between_row_detail"
+                android:layout_marginBottom="@dimen/between_row_detail"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Phone: 0938 513 856"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/post_information_text_size" />
+
+                <ImageView
+                    android:layout_gravity="right"
+                    android:id="@+id/btnCall"
+                    android:src="@drawable/ic_call"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
