--- a/app/src/main/res/layout/item_photo_post.xml
+++ b/app/src/main/res/layout/item_photo_post.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:transitionName="previewPhoto"
         android:layout_gravity="center"
         android:id="@+id/photoSample"
         android:layout_width="match_parent"
