--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -46,11 +46,12 @@
 
         <ImageButton
             android:id="@+id/imbtnBookmark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/size_top_icon"
+            android:layout_height="@dimen/size_top_icon"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:scaleType="fitCenter"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:background="@null"
@@ -58,8 +59,8 @@
 
         <ImageButton
             android:id="@+id/imbtnShare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/size_top_icon"
+            android:layout_height="@dimen/size_top_icon"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/imbtnBookmark"
             android:layout_toStartOf="@id/imbtnBookmark"
