--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -54,6 +54,7 @@
                     <EditText
                         android:id="@+id/edtPrice"
                         style="@style/EditTextPost"
+                        android:inputType="number"
                         android:hint="@string/hint_price" />
 
                 </LinearLayout>
@@ -71,6 +72,7 @@
                         android:text="@string/tv_area" />
 
                     <EditText
+                        android:inputType="number"
                         android:id="@+id/edtArea"
                         style="@style/EditTextPost"
                         android:hint="20 m2"/>
@@ -91,6 +93,7 @@
                     <EditText
                         android:id="@+id/edtAddress"
                         style="@style/EditTextPost"
+                        android:text="@string/hint_address"
                         android:hint="@string/hint_address" />
                 </LinearLayout>
 
@@ -115,7 +118,8 @@
                     <EditText
                         android:id="@+id/edtPhone"
                         style="@style/EditTextPost"
-                        android:hint="0987000111"
+                        android:hint="0938513856"
+                        android:text="0938513856"
                         android:inputType="phone" />
                 </LinearLayout>
 
